# TasteQtWidgets

./: .gitignore  CMakeLists.txt  README.md
data/: configRequirements.ini  defaultSRS.xlsx  defaultSSS.xlsx
pytastewidgets/: CMakeLists.txt  __init__.py  __init__.py.in  install.py  tasteqtwidgets_global.h  tasteqtwidgets_typesystem.xml
tastewidgets/: CMakeLists.txt
tastewidgets/QXlsx/: CMakeLists.txt
tastewidgets/QXlsx/source/: xlsxworksheet.cpp
tastewidgets/qgitlabapi/: issue.cpp  issue.h  qgitlabclient.cpp  qgitlabclient.h  urlcomposer.cpp  urlcomposer.h
tastewidgets/requirements/: CMakeLists.txt  addnewrequirementdialog.cpp  addnewrequirementdialog.h  basicrequirementdialog.ui  checkedfilterproxymodel.cpp  checkedfilterproxymodel.h  defaultsrs.h  defaultsss.h  editrequirementdialog.cpp  editrequirementdialog.h  excel.cpp  excel.h  reqif.cpp  reqif.h  requirement.cpp  requirement.h  requirementsmanager.cpp  requirementsmanager.h  requirementsmodelbase.cpp  requirementsmodelbase.h  requirementsmodelcommon.cpp  requirementsmodelcommon.h  requirementswidget.cpp  requirementswidget.h  requirementswidget.ui  selectsourcedialog.cpp  selectsourcedialog.h  selectsourcedialog.ui  virtualassistantdialog.cpp  virtualassistantdialog.h  virtualassistantdialog.ui
tastewidgets/requirements/gitlab/: gitlabrequirements.cpp  gitlabrequirements.h
tastewidgets/reviews/: reviewsmanager.cpp  reviewswidget.cpp
tastewidgets/tracecommon/: credentialwidget.cpp  credentialwidget.h  credentialwidget.ui  issuesmanager.cpp  issuesmanager.h
